syntax = "proto2";
option java_outer_classname = "RequestPayload";

message ReqPayload {
    required fixed32 studentID = 1;
}
